WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168096
WebResourceLoadDelegatePrivate.h cannot be imported standalone
https://bugs.webkit.org/show_bug.cgi?id=168096
Summary
WebResourceLoadDelegatePrivate.h cannot be imported standalone
Aakash Jain
Reported
2017-02-09 17:17:21 PST
WebResourceLoadDelegatePrivate.h cannot be imported standalone (missing WebNSInteger type). Also TargetAvailability.h should be replaced by TargetConditionals.h as it is the header containing TARGET_OS_IPHONE definition.
Attachments
Proposed patch
(2.31 KB, patch)
2017-02-09 17:23 PST
,
Aakash Jain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Aakash Jain
Comment 1
2017-02-09 17:19:59 PST
Removing WebNSInteger was proposed in a patch in
https://bugs.webkit.org/show_bug.cgi?id=145476
, but missed in final commit.
Aakash Jain
Comment 2
2017-02-09 17:23:35 PST
Created
attachment 301110
[details]
Proposed patch
WebKit Commit Bot
Comment 3
2017-02-10 11:28:11 PST
Comment on
attachment 301110
[details]
Proposed patch Clearing flags on attachment: 301110 Committed
r212128
: <
http://trac.webkit.org/changeset/212128
>
WebKit Commit Bot
Comment 4
2017-02-10 11:28:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug