WebResourceLoadDelegatePrivate.h cannot be imported standalone https://bugs.webkit.org/show_bug.cgi?id=168096

Reviewed by Alexey Proskuryakov.

* WebView/WebResourceLoadDelegatePrivate.h: Change WebNSInteger to NSInteger.


Canonical link: https://commits.webkit.org/185170@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212128 268f45cc-cd09-0410-ab3c-d52691b4dbfc